fix: 메인화면 overflow 관련 오류 수정

--- a/style.css
+++ b/style.css
@@ -14,23 +14,22 @@ a {
 
 html {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  /* min-height: 0; */
 }
 
 body {
   width: 100%;
+  min-width: fit-content;
   background-color: #222;
 }
 
 .container {
   width: 100%;
-  height: 100%;
-  padding: 1rem;
 }
 
 .navigation {
   width: 100%;
-  height: 100%;
 }
 
 .navigation__list {
@@ -41,6 +40,7 @@ body {
   grid-template-rows: repeat(auto-fit, 45rem);
   grid-auto-rows: 45rem;
   gap: 1rem;
+  padding: 1rem;
 }
 
 .navigation__item {
@@ -91,4 +91,12 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .navigation__list {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    grid-template-rows: repeat(auto-fit, 35rem);
+    grid-auto-rows: 35rem;
+  }
 }
